[gd_scene load_steps=7 format=3 uid="uid://btvk0x05tgewp"]

[ext_resource type="Script" path="res://testing/test.gd" id="1_vgntq"]
[ext_resource type="PackedScene" uid="uid://cj0mpdxnupbgl" path="res://scenes/general/direction_button.tscn" id="2_nal7t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umxcc"]
bg_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fuqh7"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_joxyy"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06f1o"]
bg_color = Color(0, 1, 0, 1)

[node name="Test" type="Node2D"]
script = ExtResource("1_vgntq")

[node name="DirectionButton" parent="." instance=ExtResource("2_nal7t")]

[node name="yellow" type="Button" parent="."]
offset_left = 384.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 128.0
theme_override_styles/normal = SubResource("StyleBoxFlat_umxcc")

[node name="blue" type="Button" parent="."]
offset_left = 384.0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 256.0
theme_override_styles/normal = SubResource("StyleBoxFlat_fuqh7")

[node name="red" type="Button" parent="."]
offset_left = 512.0
offset_top = 64.0
offset_right = 576.0
offset_bottom = 128.0
theme_override_styles/normal = SubResource("StyleBoxFlat_joxyy")

[node name="green" type="Button" parent="."]
offset_left = 512.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 256.0
theme_override_styles/normal = SubResource("StyleBoxFlat_06f1o")

[connection signal="pressed" from="yellow" to="." method="_on_yellow_pressed"]
[connection signal="pressed" from="blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="green" to="." method="_on_green_pressed"]
